# peygo-ai-helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml
agents/pelgo/: agent.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_raw_text.py  003_orphan_recovery.py
artifacts/: test_result_pdf.json
artifacts/live_run_trace/: raw_result.json
artifacts/v1_snapshot/: docker-compose.yml  last_result.json  pyproject.toml  system_info.md
backend/: schemas.py
backend/agents/: career_coach.py
backend/api/: main.py  routes.py
backend/db/: engine.py  seed.py
backend/tests/: test_fixes.py  test_integration.py  test_llguidance.py  test_qwen_schema.py
backend/tools/: __init__.py  jd_extractor.py  llm_utils.py  prioritizer.py  researcher.py  scorer.py
backend/worker/: callbacks.py  job_runner.py  run.py  trace_collector.py
example/: target-job.txt
frontend/: index.html
scratch/: run_live_trace.py  test_live_pdf.py
